# demo_game

./: .env  .gitattributes  .gitignore  Cargo.toml  build.rs  compile_shader.py
models/ak/: output.gltf
models/bison/: output.gltf
models/mr.incredible/: Mr.Incredible.glb
models/nathan/: Nathan.glb
models/pistol/: output.gltf
models/stanford_bunny/: stanford-bunny.glb
models/stanford_dragon/: stanford-dragon.glb
models/tank/: tank.gltf
models/tree/: output.gltf
models/utah_teapot/: utah-teapot.glb
protos/: grpc_service.proto
shaders/: basicShader.frag  basicShader.vert  basicShader_animated.spv  basicShader_animated.vert  basicShader_mesh.spv  basicShader_mesh.vert  basicShader_noTexture.frag  basicShader_noTexture.spv  frag.spv  instance.frag  instance.vert  instance_frag.spv  instance_vert.spv  terrain.frag  terrain.spv  terrain.tesc  terrain.vert  terrain_frag.spv  terrain_vert.spv  ui.frag  ui.vert  ui_frag.spv  ui_vert.spv  vert.spv  water.frag  water_frag.spv
shaders/macos/: basicShader.frag  instance.frag  terrain.frag  water.frag
src/: lib.rs  main.rs
src/game/: game.rs  mod.rs
src/game/graphics/: mod.rs
src/game/graphics/dx12/: command_queue.rs  descriptor_heap.rs  graphics.rs  mod.rs  pipeline.rs  resource.rs  swapchain.rs
src/game/graphics/vk/: buffer.rs  dynamic_object.rs  graphics.rs  image.rs  initializer.rs  mod.rs  physical_device.rs  pipeline.rs  shader.rs  swapchain.rs  thread.rs  uniform_buffers.rs
src/game/graphics/vk/descriptor/: descriptor_allocator.rs  descriptor_builder.rs  descriptor_layout_cache.rs  mod.rs
src/game/scenes/: game_scene.rs  mod.rs  title_scene.rs
src/game/shared/: camera.rs  mod.rs  resource_manager.rs  scene_manager.rs  ui_manager.rs
src/game/shared/components/: mod.rs  render_component.rs
src/game/shared/enums/: image_format.rs  mod.rs  sampler_resource.rs  scene_type.rs  shader_type.rs
src/game/shared/structs/: animation.rs  blend_mode.rs  completed_tasks.rs  counts.rs  frustum.rs  instanced_model.rs  joint.rs  lighting.rs  mesh.rs  mod.rs  model.rs  model_metadata.rs  player.rs  push_constant.rs  skinned_mesh.rs  skinned_model.rs  skinned_vertex.rs  ssbo.rs  vertex.rs  view_projection.rs  waitable_tasks.rs
src/game/shared/structs/games/: mod.rs
src/game/shared/structs/models/: instanced_model.rs  instanced_vertex.rs  joint.rs  mesh.rs  mod.rs  model.rs  model_metadata.rs  position_info.rs  skinned_mesh.rs  skinned_model.rs  skinned_vertex.rs  ssbo.rs  vertex.rs
src/game/shared/structs/primitives/: mod.rs
src/game/shared/structs/terrain/: mod.rs
src/game/shared/systems/: mod.rs  network_system.rs  ui_system.rs
src/game/shared/traits/: disposable.rs  graphics_base.rs  mappable.rs  mod.rs  renderable.rs  scene.rs
src/game/shared/types/: mod.rs
src/game/shared/util/: height_generator.rs  mod.rs  perlin_noise.rs  util.rs
src/game/ui/: mod.rs
src/game/ui/vk/: buffer.rs  mod.rs  texture.rs
src/protos/: grpc_service.rs  jwt_token_service.rs  mod.rs
