[package]
name = "demo_game_rs"
version = "0.1.0"
authors = ["Chehui Chou <deadshot465@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned_alloc = ">=0.1.3"
anyhow = ">=1.0.40"
ash = ">=0.32.1"
ash-window = ">=0.6.0"
async-stream = ">=0.3.2"
async-trait = ">=0.1.50"
base64 = ">=0.13.0"
bytemuck = ">=1.5.1"
crossbeam = ">=0.8.1"
dashmap = ">=4.0.2"
dotenv = ">=0.15.0"
downcast-rs = ">=1.2.0"
env_logger = ">=0.8.3"
glam = { version = ">=0.15.2", features = ["bytemuck", "serde"] }
gltf = { version = ">=0.16.0", features = ["extras", "names", "import", "utils"] }
image = ">=0.23.14"
log = ">=0.4.14"
memoffset = ">=0.6.4"
nuklear-rust = ">=0.6.3"
num_cpus = ">=1.13.0"
once_cell = ">=1.7.2"
parking_lot = ">=0.11.1"
prost = ">=0.7.0"
rand = ">=0.8.3"
rayon = ">=1.5.1"
regex = ">=1.5.4"
reqwest = { version = ">=0.11.3", features = ["blocking", "json"] }
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
slotmap = ">=1.0.3"
tonic = ">=0.4.3"
tokio = { version = ">=1.6.1", features = ["full", "parking_lot"] }
vk-mem = ">=0.2.2"
winit = ">=0.25.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = ">=0.3.9", features = ["basetsd", "d3d11", "d3d11sdklayers", "d3d12", "d3d12sdklayers", "d3d12shader", "d3dcommon", "d3dcompiler", "dxgi", "dxgi1_2", "dxgi1_3", "dxgi1_4", "dxgi1_5", "dxgi1_6", "dxgidebug", "dxgiformat", "dxgitype", "handleapi", "minwindef", "synchapi", "unknwnbase", "winbase", "windef","winerror", "winnt", "winuser", "impl-default", "impl-debug"] }
wio = ">=0.2.2"

[build-dependencies]
tonic-build = ">=0.4.2"